# kome

./: .coverage  README.rst  pyproject.toml  requirements.dev.txt
.github/workflows/: action.yml
docs/source/: conf.py  index.rst
examples/: sample.py
kome/: insert.py
pyqueryinterafce.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_delete.py  test_field.py  test_inser.py  test_kome.py  test_numeric.py  test_order_by.py  test_pyqueryinterafce.py  test_select.py  test_table.py  test_update.py
